--- a/.github/workflows/vyos-v1.3.x-equuleus.yml
+++ b/.github/workflows/vyos-v1.3.x-equuleus.yml
@@ -10,7 +10,7 @@ env:
   DEBIAN_MIRROR: http://ftp.us.debian.org/debian/
   BRANCH: equuleus
   BUILD_ARCH: amd64
-  BUILD_BY: vyos-build-action@github.com
+  BUILD_BY: admin@ovirt.club
   BUILD_TYPE: release
   BUILD_VERSION: 1.3.2
   BUILD_QEMU: true
